package com.gestionusuarios.model;

// Clase enum Rol con los atributos de valor fijo o constante
// para definir los 2 roles solicitados para el sistema

public enum Rol {
    ADMINISTRADOR,
    ESTANDAR
}
